# multi-tenant-agent

./: .env.example  README.md  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 0b068b91f54b_initial_schema.py  0c75146a49e3_initial_schema.py  7b92e3fb79b4_initial_schema.py
src/: main.py
src/agent/: base.py  graph_agent.py  old_graph_agent.py
src/agent/models/: enums.py  execution_state.py  outputs.py
src/agent/tools/: file_system.py
src/agent_shell/: shell_chat.py
src/api/: router.py
src/api/routes/: agent.py  auth.py
src/auth/: dependencies.py  jwt_handler.py  models.py
src/core/: config.py
src/db/: base.py  session.py
src/db/models/: procurement.py  procuring_entity.py
src/db/repositories/: procurement_repo.py  procuring_entity_repo.py
src/mcp_server/: procurement_server.py
src/pipeline/: README.md
src/pipeline/activities/: fetch_activity.py  upsert_activity.py
src/pipeline/clients/: embedding_client.py  milvus_client.py  pncp_client.py
src/pipeline/mappers/: pncp_mapper.py
src/pipeline/models/: pncp.py  state.py
src/pipeline/workers/: create_schedule.py  sync_worker.py
src/pipeline/workflows/: sync_workflow.py
src/utils/: formatters.py  loggers.py  renderers.py
