[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-tenant-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.2",
    "ipython>=9.12.0",
    "langchain>=1.2.15",
    "langchain-anthropic>=1.4.0",
    "langchain-openai>=1.1.12",
    "langfuse>=4.5.1",
    "langgraph>=1.1.6",
    "python-jose[cryptography]>=3.5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pyright]
extraPaths = ["."]

[tool.fastapi]
entrypoint = "src.main:app"
