[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-tenant-agent"
version = "0.1.0"
description = "Multi-tenant AI agent for Brazilian government procurement analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # --- Web framework ---
    "fastapi[standard]>=0.135.2",
    # --- LLM stack ---
    "langchain>=1.2.15",
    "langchain-anthropic>=1.4.0",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.6",
    # --- Observability ---
    "langfuse>=4.5.1",
    # --- Auth ---
    "python-jose[cryptography]>=3.5.0",
    # --- Config ---
    "pydantic-settings>=2.0.0",
    # --- Pipeline: orquestração ---
    "temporalio>=1.7.0",            # SDK Python do Temporal
    # --- Pipeline: vector store ---
    # SDK Python do Milvus (inclui Milvus Lite)
    # --- Pipeline: embeddings ---
    "openai>=1.0.0",                # usado pelo EmbeddingClient
    # --- Pipeline: HTTP client ---
    "httpx>=0.27.0",                # chamadas async à API do PNCP
    # --- Banco relacional ---
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",              # driver async para Postgres
    "alembic>=1.13.0",              # migrations de schema
    # --- Utils ---
    "rich<=15.0.0",
    "ipython>=9.12.0",
    "pymilvus==3.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pyright]
extraPaths = ["."]

[tool.fastapi]
entrypoint = "src.main:app"
